Fixed Ugly Padding
Padding on the body squished the text.

--- a/projects/birdStyle.css
+++ b/projects/birdStyle.css
@@ -3,7 +3,7 @@
 .blurb
 {
 	color:black;
-	padding: 0px 480px;
+	padding: 0px 200px;
 }
 
 .blurb p
